--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.custom-scroll::-webkit-scrollbar{
+  width: 8px;
+}
+.custom-scroll::-webkit-scrollbar-thumb{
+  border-radius: 30px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover{
+  background-color: #ccc;
+}
 .app{
   height: 100vh;
   width: 100%;
@@ -15,10 +26,13 @@
   flex: 1;
   width: 100%;
   overflow-x: auto;
-  padding: 20px;
+  
 }
 
 .app_boards{
+  height: 100%;
+  padding: 20px;
+  padding-bottom: 0;
   min-width: fit-content;
   display: flex;
   gap: 30px; 
