--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -2,6 +2,7 @@
     min-width: 290px;
     max-height: 100%;
     display: flex;
+    height: 100%;
     flex-direction: column;
     gap: 20px;
 }
@@ -19,10 +20,21 @@
 }
 
 .board_cards{
+    flex: 1;
+    height: 100%;
     background-color: #f8f8f8;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 10px;
     border-bottom: 10px;
+    overflow-y: auto;
+}
+.board_cards_add{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 1px 2px 0 1px rgba(0,0,0,0.15);
+}
+.board_cards_add:hover{
+    box-shadow: 1px 2px 0 1px #ccc;
 }
