--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,40 +1,67 @@
-.board{
-    min-width: 290px;
-    max-height: 100%;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    gap: 20px;
-}
-.board_top{
-    display: flex;
-}
-.board_top_title{
-    flex:1;
-    display : flex;
-    align-items: center;
-    font-weight: bold;
-}
-.board_top_title span{
-    color: gray;
+.board {
+  min-width: 290px;
+  width: 290px;
+  max-height: 100%;
+  flex-basis: 290px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.board_cards{
-    flex: 1;
-    height: 100%;
-    background-color: #f8f8f8;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-    border-bottom: 10px;
-    overflow-y: auto;
+.board_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.board_cards_add{
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 1px 2px 0 1px rgba(0,0,0,0.15);
+
+.board_header_title {
+  font-weight: bold;
+  font-size: 1rem;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
-.board_cards_add:hover{
-    box-shadow: 1px 2px 0 1px #ccc;
+
+.board_header_title span {
+  color: rgb(145, 145, 145);
+}
+
+.board_header_title_more {
+  cursor: pointer;
+  position: relative;
+}
+
+.board_dropdown {
+  box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.12);
+  padding: 20px;
+  width: 150px !important;
+  cursor: default;
+}
+.board_dropdown p {
+  border-bottom: 1px solid #f8f8f8;
+  cursor: pointer;
+}
+
+.board_cards {
+  background-color: #f8f8f8;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow-y: auto;
+}
+
+.board_add-card {
+  background-color: #fff;
+  color: #000;
+  border-radius: 10px;
+  box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);
+  width: 100%;
+  text-align: center;
+}
+.board_add-card_edit {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
 }
