--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
-  background-color: #0096FF;
+  background-color: #7f53ac;
+background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
 }
 
 .app_boards_container {
