--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -43,7 +43,7 @@
 }
 
 .board_cards {
-  background-color: #f8f8f8;
+  background-color: #edadad;
   padding: 10px;
   border-radius: 5px;
   display: flex;
