--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background-color: #fff;
+  background-color: #f4e3cb;
   border-radius: 10px;
 }
 
